It makes really fun :D

--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,5 @@
 + Lautstärke regeln / speichern
 + Hintergrundmusik leiser
 + 5 Levels
-+ Introscreen (mit Story, die scrollt?) 
++ Introscreen (mit Story, die scrollt?) Hell yeah, das wäre total simpel mit
+  sparrow3d :D
