New doors look great.

--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,8 @@
-+ Lautstärke regeln / speichern
-+ Hintergrundmusik leiser
-+ 5 Levels
-+ Introscreen (mit Story, die scrollt?) Hell yeah, das wäre total simpel mit
-  sparrow3d :D
+- resorting of levels
+- new levels
+- new enemies
+	- fast one
+	- following one
+	- really fast shooting one (targeting and "stupid")
+	- enemey, which splits
+- Making the end bosses harder
