--- a/ToDo
+++ b/ToDo
@@ -1,11 +1,18 @@
-+ clouds
+Roadmap to final release (snowman reloaded?)
 - cooler broom
-- cooler enemies
+- cooler and new enemies
+	+ red one - coak
+	+ blue one - big sun
+	+ green shooting one - water drop (shooting drops)
+	- lila targeting one - hair dryer (shooting "grey air")
+	- green more powerful targeting one - bunny (shooting colorful eggs)
+	- fast one (new) - black raven
+	- following one (new) - kid
+	- REALLY fast shooting one (targeting and "stupid") (new) - Schneeräummaschine (to laze to search the english word :P)
+	- enemey, which splits (new) - yellow "pissed" snow
+	- bomb (explodes, when touches) (new) - bomb
+	- end bosses - like the "normal" enemies, but bigger, more powerfull and with faster shooting. Maybe another color.
+- changing the "belly weapon" (to powerful)
 - resorting of levels
-- new levels
-- new enemies
-	- fast one
-	- following one
-	- really fast shooting one (targeting and "stupid")
-	- enemey, which splits
+- new levels (5 x 6, 2 kind of enemies per levelset new, bigger levels)
 - Making the end bosses harder
