--- a/ToDo
+++ b/ToDo
@@ -3,8 +3,8 @@ Roadmap to final release (snowman reloaded?)
 	+ red one - coak
 	+ blue one - big sun
 	+ green shooting one - water drop (shooting drops)
-	- lila targeting one - hair dryer (shooting "grey air")
-	- green more powerful targeting one - bunny (shooting colorful eggs)
+	+ lila targeting one - hair dryer (shooting "grey air")
+	- türkis more powerful targeting one - bunny (shooting colorful eggs)
 	- fast one (new) - black raven
 	- following one (new) - kid
 	- REALLY fast shooting one (targeting and "stupid") (new) - Schneeräummaschine (to laze to search the english word :P)
