Added fancy new stuff to the ToDo and removed some old unneeded stuff from the levels.

--- a/ToDo
+++ b/ToDo
@@ -4,14 +4,24 @@ Roadmap to final release (snowman reloaded?)
 	+ blue one - big sun
 	+ green shooting one - water drop (shooting drops)
 	+ lila targeting one - hair dryer (shooting "grey air")
-	- türkis more powerful targeting one - bunny (shooting colorful eggs)
-	- fast one (new) - black raven
-	- following one (new) - kid
-	- REALLY fast shooting one (targeting and "stupid") (new) - Schneeräummaschine (to laze to search the english word :P)
+	+ türkis more powerful targeting one - bunny (shooting colorful eggs)
 	- enemey, which splits (new) - yellow "pissed" snow
 	- bomb (explodes, when touches) (new) - bomb
-	- end bosses - like the "normal" enemies, but bigger, more powerfull and with faster shooting. Maybe another color.
+	- end bosses - like the "normal" enemies, but bigger, more powerfull and with faster shooting
 - changing the "belly weapon" (to powerful)
 - resorting of levels
-- new levels (5 x 6, 2 kind of enemies per levelset new, bigger levels)
+	- new levels (5 x 6, 2 kind of enemies per levelset new, bigger levels)
+	- Level 1:
+		- coak
+		- sun
+		- drop
+	- Level 2:
+		- hair dryer
+	- Level 3:
+		- brown bunny
+		- white bunny
+	- Level 4:
+		- pissed snow
+	- Level 5:
+		- bomb
 - Making the end bosses harder
