First new enemy designs

--- a/ToDo
+++ b/ToDo
@@ -5,12 +5,12 @@ Roadmap to final release (snowman reloaded?)
 	+ green shooting one - water drop (shooting drops)
 	+ lila targeting one - hair dryer (shooting "grey air")
 	+ türkis more powerful targeting one - bunny (shooting colorful eggs)
-	- enemey, which splits (new) - yellow "pissed" snow
+	- enemy, which splits (new) - yellow "pissed" snow
 	- bomb (explodes, when touches) (new) - bomb
 	- end bosses - like the "normal" enemies, but bigger, more powerfull and with faster shooting
 - changing the "belly weapon" (to powerful)
 - resorting of levels
-	- new levels (5 x 6, 2 kind of enemies per levelset new, bigger levels)
+	- new levels (5 x 6, 2 kind of enemies per levelset; new, bigger levels)
 	- Level 1:
 		- coak
 		- sun
