--- a/ToDo
+++ b/ToDo
@@ -6,7 +6,7 @@ Roadmap to final release (snowman reloaded?)
 	+ lila targeting one - hair dryer (shooting "grey air")
 	+ türkis more powerful targeting one - bunny (shooting colorful eggs)
 	- enemy, which splits (new) - yellow "pissed" snow
-	- bomb (explodes, when touches) (new) - bomb
+	- bomb (explodes, when touches), runs to the player (new) - bomb
 	- end bosses - like the "normal" enemies, but bigger, more powerfull and with faster shooting
 - changing the "belly weapon" (to powerful)
 - resorting of levels
