Changes because of libsparrow changes

--- a/ToDo
+++ b/ToDo
@@ -4,3 +4,4 @@ Roadmap to final release (snowman reloaded?)
 - easy and hard mode
 - pause == options
 - Kreis-Kreis Kollision!
+- Pfeile raus oder besser
