--- a/ToDo
+++ b/ToDo
@@ -1,6 +1,20 @@
 Roadmap to final release (snowman reloaded?)
+Level 1: Snow -> DONE
+Level 2: Psycho -> only hard
+Level 3: Grünlich ("Wiese") (modifizierte 1.)
+	+ 3-0: hard
+	+ 3-1: hard
+	+ 3-2: hard
+	- 3-3: to do
+	- 3-4: brauner Hase, weißer Hase, roter Superhase
+Level 4: Wie 3 sonst war
+	- 4-0: neues Level mit pissed snow
+	- 4-1: Ehemalige 3-0 mit pissed snow
+	- 4-2: Ehemalige 3-1 mit pissed snow
+	- 4-3: Ehemalige 3-2 mit pissed snow
+	- 4-4: riesiger pissed snow
+
 - cooler and new enemies
 	- enemy, which splits (new) - yellow "pissed" snow
-- easy and hard mode
-- Kreis-Kreis Kollision!
+- Compo4all compatibility
 - Pfeile raus oder besser
