--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,5 @@
 + Level 1: Snow -> DONE -> with hard
-- Level 2: Psycho -> DONE
+- Level 2: Psycho -> DONE -> with hard (0)
 - Level 3: Grünlich ("Wiese") (modifizierte 1.)
 	+ 3-0: done
 	+ 3-1: done
@@ -14,7 +14,7 @@
 	- 4-4: riesiger pissed snow
 + Finish -> DONE
 
+- Minimap
 - cooler and new enemies
 	- enemy, which splits (new) - yellow "pissed" snow
 - Compo4all compatibility
-- Pfeile raus oder besser
