--- a/ToDo
+++ b/ToDo
@@ -1,8 +1,8 @@
 + Level 1: Snow -> DONE -> with hard
-- Level 2: Psycho -> DONE -> with hard (0)
+- Level 2: Psycho -> DONE -> with hard
 - Level 3: Grünlich ("Wiese") (modifizierte 1.)
-	+ 3-0: done
-	+ 3-1: done
+	+ 3-0: done + hard
+	+ 3-1: done + hard
 	+ 3-2: done
 	- 3-3: to do
 	- 3-4: brauner Hase, weißer Hase, roter Superhase
@@ -15,6 +15,7 @@
 + Finish -> DONE
 
 - Minimap
+- new font
 - cooler and new enemies
 	- enemy, which splits (new) - yellow "pissed" snow
 - Compo4all compatibility
