--- a/ToDo
+++ b/ToDo
@@ -3,7 +3,7 @@
 - Level 3: Grünlich ("Wiese") (modifizierte 1.)
 	+ 3-0: done + hard
 	+ 3-1: done + hard
-	+ 3-2: done
+	+ 3-2: done + hard
 	- 3-3: to do
 	- 3-4: brauner Hase, weißer Hase, roter Superhase
 - Level 4: Wie 3 sonst war
