--- a/ToDo
+++ b/ToDo
@@ -1,18 +1,10 @@
-- Level 3: Grünlich ("Wiese") (modifizierte 1.)
-	+ 3-0: done + hard
-	+ 3-1: done + hard
-	+ 3-2: done + hard
-	- 3-3: to do
-	- 3-4: brauner Hase, weißer Hase, roter Superhase
-- Level 4: Wie 3 sonst war
-	- 4-0: neues Level mit pissed snow
-	- 4-1: Ehemalige 3-0 mit pissed snow
-	- 4-2: Ehemalige 3-1 mit pissed snow
-	- 4-3: Ehemalige 3-2 mit pissed snow
-	- 4-4: riesiger pissed snow
-+ Finish -> DONE
-
-- new story
+- 3-3: to do
+- 3-4: to do,brauner Hase, weißer Hase, roter Superhase
+- 4-0: neues Level mit pissed snow
+- 4-1: Ehemalige 3-0 mit pissed snow
+- 4-2: Ehemalige 3-1 mit pissed snow
+- 4-3: Ehemalige 3-2 mit pissed snow
+- 4-4: riesiger pissed snow
 - cooler and new enemies
 	- enemy, which splits (new) - yellow "pissed" snow
 - Compo4all compatibility
