--- a/ToDo
+++ b/ToDo
@@ -9,4 +9,4 @@
 	- enemy, which splits (new) - yellow "pissed" snow
 - Compo4all compatibility
 	- Implement success room
-- Exit: really quit?
+- specific music for every level
