New levels C4A implemented!

--- a/ToDo
+++ b/ToDo
@@ -1,10 +1,4 @@
-- 3-4: to do,brauner Hase, weißer Hase, roter Superhase
-- 4-0: neues Level mit pissed snow
-- 4-1: Ehemalige 3-0 mit pissed snow
-- 4-2: Ehemalige 3-1 mit pissed snow
-- 4-3: Ehemalige 3-2 mit pissed snow
+- 4-3: Neu
 - 4-4: riesiger pissed snow
-- cooler and new enemies
-	- enemy, which splits (new) - yellow "pissed" snow
 - Compo4all compatibility
 	- Implement success room
