--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,4 @@
-- 4-3: Neu
+- 4-3: Neu (Blubbles, Vierecke, Ebenen!)
 - 4-4: riesiger pissed snow
 - Compo4all compatibility
 	- Implement success room
