--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,9 @@
-- 4-3: Neu (Blubbles, Vierecke, Ebenen!)
-- 4-4: riesiger pissed snow
-- Compo4all compatibility
-	- Implement success room
+- Fallgeschwindigkeit maximieren
+- Laufbeschleunigung
+- Buttonmapping
+- Keine Dauersprünge
+- One-Way-Pfeile raus?
+- Competitionbemerkung raus
+- Reset-funktion
+- C4A Menu Türen beschriftung optimieren
+- finish.slvl falsche Webadresse
